使用协程+room重构mmvm框架

--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginBottom="30dp"
     android:paddingStart="10dp"
-    tools:context=".RecordDetailActivity">
+    tools:context=".UI.activity.RecordDetailActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -62,22 +62,23 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp">
 
                 <Button
                     android:id="@+id/read"
-                    android:layout_margin="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:layout_marginBottom="35dp"
                     android:layout_weight="1"
                     android:text="已阅" />
 
                 <Button
                     android:id="@+id/collect"
-                    android:layout_margin="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:layout_marginBottom="35dp"
                     android:layout_weight="1"
                     android:text="收藏" />
