--- a/app/src/main/res/layout/activity_collection_detail.xml
+++ b/app/src/main/res/layout/activity_collection_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginBottom="30dp"
     android:paddingStart="10dp"
-    tools:context=".RecordDetailActivity">
+    tools:context=".UI.activity.RecordDetailActivity">
 
     <ScrollView
         android:layout_width="match_parent"
