--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/recordFragment"
-        android:name="com.example.crm_test.RecordFragment"
+        android:name="com.example.crm_test.UI.Fragment.RecordFragment"
         android:label="fragment_record"
         tools:layout="@layout/fragment_record" />
     <fragment
         android:id="@+id/collectionRecord"
-        android:name="com.example.crm_test.CollectionRecord"
+        android:name="com.example.crm_test.UI.Fragment.CollectionRecordFragment"
         android:label="fragment_collection"
         tools:layout="@layout/fragment_collection_record" />
     <fragment
         android:id="@+id/myFragment"
-        android:name="com.example.crm_test.MyFragment"
+        android:name="com.example.crm_test.UI.Fragment.MyFragment"
         android:label="fragment_my"
         tools:layout="@layout/fragment_my" />
 </navigation>
