--- a/app/src/main/res/layout/record_list_item_layout.xml
+++ b/app/src/main/res/layout/record_list_item_layout.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:orientation="vertical"
     android:id="@+id/content"
-    app:cardBackgroundColor="#22999999"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="2dp"
-    app:contentPadding="2dp">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:text="谁提交了" />
-</androidx.cardview.widget.CardView>
+        android:layout_margin="8dp"
+        android:orientation="vertical"
+        app:cardBackgroundColor="#22999999"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="2dp"
+        app:contentPadding="2dp">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:text="谁提交了" />
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
