--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -10,8 +10,8 @@
         android:shortcutShortLabel="@string/title_activity_login">
         <intent
             android:action="android.intent.action.VIEW"
-            android:targetClass="com.example.crm_test.UI.activity.LoginActivity"
-            android:targetPackage="com.example.crm_test" />
+            android:targetClass="com.nightwolf.crm_test.UI.activity.LoginActivity"
+            android:targetPackage="com.nightwolf.crm_test" />
 
     </shortcut>
 </shortcuts>
