1.废弃kotlin-android-extensions 2.全面屏修改

--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="30dp"
         android:paddingStart="10dp"
-        tools:context=".UI.activity.RecordDetailActivity">
+        tools:context=".ui.activity.RecordDetailActivity">
 
         <ScrollView
             android:id="@+id/scrollView2"
