--- a/app/src/main/res/menu/main_bottom_menu.xml
+++ b/app/src/main/res/menu/main_bottom_menu.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/recordFragment"
         android:icon="@drawable/ic_assignment_black_24dp"
         android:title="审阅" />
+    <item
+        android:id="@+id/feedFragment"
+        android:icon="@drawable/ic_baseline_alternate_email_24"
+        android:title="\@me" />
     <item
         android:id="@+id/collectionRecord"
         android:icon="@drawable/ic_assistant_black_24dp"
