--- a/app/src/main/res/menu/main_bottom_menu.xml
+++ b/app/src/main/res/menu/main_bottom_menu.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/recordFragment"
         android:icon="@drawable/ic_assignment_black_24dp"
-        android:title="审阅" />
+        android:title="审阅"
+        app:showAsAction="always" />
     <item
         android:id="@+id/feedFragment"
         android:icon="@drawable/ic_baseline_alternate_email_24"
-        android:title="\@me" />
+        android:title="\@me"
+        app:showAsAction="always" />
     <item
         android:id="@+id/collectionRecord"
         android:icon="@drawable/ic_assistant_black_24dp"
-        android:title="收集" />
+        android:title="收集"
+        app:showAsAction="always" />
     <item
         android:id="@+id/myFragment"
         android:icon="@drawable/ic_assignment_ind_black_24dp"
-        android:title="我的" />
+        android:title="我的"
+        app:showAsAction="always" />
 </menu>
