类型转化问题

--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -103,7 +103,9 @@
                     android:id="@+id/otherReplyRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp" />
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:minHeight="200dp" />
             </LinearLayout>
         </ScrollView>
 
