--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -35,6 +35,7 @@
                     android:layout_height="wrap_content"
                     android:text="工作内容:"
                     android:textStyle="bold"
+                    android:textColor="#000"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,6 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:textSize="14sp"
+                    android:textColor="#000"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/text1" />
 
@@ -55,6 +57,7 @@
                     android:text="计划:"
                     android:textSize="16dp"
                     android:textStyle="bold"
+                    android:textColor="#000"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/text1_content" />
 
@@ -65,6 +68,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="30dp"
                     android:textSize="14sp"
+                    android:textColor="#000"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/text2" />
 
@@ -93,11 +97,6 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:text="标记为已读：某人重复提交时，无需重复发送\n收藏的记录可以在收集中查约" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/otherReplyRecycler"
