--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -37,6 +37,7 @@
         android:text="姓名"
         android:textSize="16dp"
         android:textStyle="bold"
+        android:textColor="#000"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
@@ -47,6 +48,7 @@
         android:layout_marginTop="15dp"
         android:text="来邦科技"
         android:textSize="15dp"
+        android:textColor="#000"
         app:layout_constraintStart_toStartOf="@+id/accountName"
         app:layout_constraintTop_toBottomOf="@+id/accountName" />
 
@@ -79,6 +81,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:text="登录"
+            android:textColor="#000"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -109,6 +112,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:text="我的日报"
+            android:textColor="#000"
             android:textSize="20sp" />
     </LinearLayout>
 
