--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="15dp"
         android:text="等待审阅项目"
         android:textSize="16sp"
+        android:textColor="#000"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
