--- a/app/src/main/res/layout/record_list_item_layout.xml
+++ b/app/src/main/res/layout/record_list_item_layout.xml
@@ -53,6 +53,7 @@
             <TextView
                 android:id="@+id/content"
                 android:layout_width="0dp"
+                android:textColor="#000"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:paddingBottom="20dp"
