--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -17,15 +17,15 @@
         app:title="审阅"
         app:titleTextColor="@color/white" />
 
-    <TextView
-        android:id="@+id/wait_read_text"
+    <CheckBox
+        android:id="@+id/look_have_read"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="等待审阅项目"
-        android:textSize="16sp"
+        android:layout_marginEnd="20dp"
+        android:text="查看已读"
         android:textColor="#000"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="16sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
@@ -36,7 +36,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wait_read_text">
+        app:layout_constraintTop_toBottomOf="@+id/look_have_read">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_recycler"
