--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#33F1F1F1"
-    tools:context=".ui.Fragment.MyFragment">
+    tools:context=".ui.fragment.MyFragment">
 
 
     <androidx.appcompat.widget.Toolbar
