--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,21 +7,21 @@
 
     <fragment
         android:id="@+id/recordFragment"
-        android:name="com.nightwolf.crm_test.ui.Fragment.RecordFragment"
+        android:name="com.nightwolf.crm_test.ui.fragment.RecordFragment"
         android:label="fragment_record"
         tools:layout="@layout/fragment_record" />
     <fragment
         android:id="@+id/collectionRecord"
-        android:name="com.nightwolf.crm_test.ui.Fragment.CollectionRecordFragment"
+        android:name="com.nightwolf.crm_test.ui.fragment.CollectionRecordFragment"
         android:label="fragment_collection"
         tools:layout="@layout/fragment_collection_record" />
     <fragment
         android:id="@+id/myFragment"
-        android:name="com.nightwolf.crm_test.ui.Fragment.MyFragment"
+        android:name="com.nightwolf.crm_test.ui.fragment.MyFragment"
         android:label="fragment_my"
         tools:layout="@layout/fragment_my" />
     <fragment
         android:id="@+id/feedFragment"
-        android:name="com.nightwolf.crm_test.ui.Fragment.FeedFragment"
+        android:name="com.nightwolf.crm_test.ui.fragment.FeedFragment"
         android:label="FeedFragment" />
 </navigation>
